# slit_animation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
static/: index.html
static/pkg/: package.json  slit_animation.d.ts  slit_animation.js  slit_animation_bg.wasm  slit_animation_bg.wasm.d.ts
