[package]
name = "slit_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
gif = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = "0.4"
